--- a/backend/package.json
+++ b/backend/package.json
@@ -20,7 +20,8 @@
     "typescript": "~5.6.3"
   },
   "dependencies": {
-    "aws-cdk-lib": "2.215.0",
+    "aws-cdk-lib": "2.233.0",
+    "@cdklabs/generative-ai-cdk-constructs": "^0.1.304",
     "constructs": "^10.0.0"
   }
 }
