Add missing Lambda handler code for WebSocket and Admin API
- Created websocket-handler/index.js with full implementation for:
  - sendMessage: Query Bedrock KB, apply guardrails, save to DynamoDB
  - submitFeedback: Update conversation feedback
  - submitEscalation: Save support requests
- Created admin-api/index.js with endpoints for:
  - GET /metrics: Dashboard metrics with daily conversation counts
  - GET /feedback: List conversations with feedback
  - GET /escalations: List support requests
  - POST /feedback: Submit feedback (public)
  - POST /escalations: Submit support request (public)
  - DELETE /escalations/{id}: Remove escalation
- Updated .gitignore to allow Lambda JS files

--- a/backend/lambda/admin-api/package.json
+++ b/backend/lambda/admin-api/package.json
@@ -4,7 +4,8 @@
   "description": "Admin API handler for AskUSDA dashboard",
   "main": "index.js",
   "dependencies": {
-    "aws-sdk": "^2.1691.0",
-    "uuid": "^9.0.1"
+    "@aws-sdk/client-dynamodb": "^3.0.0",
+    "@aws-sdk/lib-dynamodb": "^3.0.0",
+    "uuid": "^9.0.0"
   }
 }
